[package]
name = "ifk-hindas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
reqwest = "0.12.4"
scraper = "0.19.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["cors"] }
